# frontier-math-agent2

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.yml  research_task.yml
.github/workflows/: lint.yml  tests.yml
docs/: architecture.md  benchmark_plan.md  roadmap.md  safety_and_limits.md  vision.md
src/frontier_math_agent/: __init__.py  agent.py  config.py  main.py
src/frontier_math_agent/evaluation/: metrics.py  run_eval.py  tasks.py
src/frontier_math_agent/memory/: research_log.py  session_memory.py
src/frontier_math_agent/prompts/: planner_prompt.txt  system_prompt.txt  verifier_prompt.txt
src/frontier_math_agent/tools/: literature_search.py  notes_store.py  numeric_experiments.py  symbolic_math.py  theorem_checker.py
src/frontier_math_agent/workflows/: conjecture_session.py  counterexample_hunt.py  proof_sketch_session.py
tests/: test_agent.py  test_tools.py  test_workflows.py
